[gd_scene format=3 uid="uid://ch8ljtcuvjg48"]

[ext_resource type="Script" uid="uid://p0x2f70nn1sy" path="res://scripts/selectable_canvas_group.gd" id="1_5u6i1"]
[ext_resource type="Script" uid="uid://dbt7erpalpnhb" path="res://scripts/wall_clock.gd" id="1_rsrms"]
[ext_resource type="Script" uid="uid://musakg3k6s1l" path="res://scripts/selectable_component.gd" id="2_x0q8p"]
[ext_resource type="Texture2D" uid="uid://cra23xb8qrwv4" path="res://textures/lab_objects/clock.svg" id="3_6mva3"]
[ext_resource type="Script" uid="uid://b810schxe1hne" path="res://scripts/interact_info.gd" id="3_rj6r8"]
[ext_resource type="Texture2D" uid="uid://cu5wbod0a00uj" path="res://textures/lab_objects/clock_small_hand.svg" id="6_p2loy"]
[ext_resource type="Texture2D" uid="uid://7mr6rsontnyb" path="res://textures/lab_objects/clock_second_hand.svg" id="7_rj6r8"]
[ext_resource type="Texture2D" uid="uid://dxce217ej6x8g" path="res://textures/lab_objects/clock_big_hand.svg" id="7_x0q8p"]

[sub_resource type="Resource" id="Resource_isgb8"]
script = ExtResource("3_rj6r8")
description = "(hold) Speed up time"
metadata/_custom_type_script = "uid://b810schxe1hne"

[node name="WallClock" type="Node2D" unique_id=1181953387]
script = ExtResource("1_rsrms")

[node name="SelectableComponent" type="Node2D" parent="." unique_id=1451422631]
script = ExtResource("2_x0q8p")
interact_info = SubResource("Resource_isgb8")
metadata/_custom_type_script = "uid://musakg3k6s1l"

[node name="SelectableCanvasGroup" type="CanvasGroup" parent="SelectableComponent" unique_id=1969546148]
script = ExtResource("1_5u6i1")
metadata/_custom_type_script = "uid://p0x2f70nn1sy"

[node name="Clock" type="Sprite2D" parent="SelectableComponent/SelectableCanvasGroup" unique_id=379468511]
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_6mva3")

[node name="HourHand" type="Sprite2D" parent="." unique_id=846982081]
scale = Vector2(0.2, 0.2)
texture = ExtResource("6_p2loy")
offset = Vector2(-2, -60)

[node name="MinuteHand" type="Sprite2D" parent="." unique_id=793852914]
scale = Vector2(0.2, 0.2)
texture = ExtResource("7_x0q8p")
offset = Vector2(-2, -60)

[node name="SecondHand" type="Sprite2D" parent="." unique_id=212374882]
scale = Vector2(0.2, 0.2)
texture = ExtResource("7_rj6r8")
offset = Vector2(-2, -60)

[connection signal="started_holding" from="SelectableComponent" to="." method="_on_selectable_component_started_holding"]
[connection signal="stopped_holding" from="SelectableComponent" to="." method="_on_selectable_component_stopped_holding"]
